# artist-mgmt

./: .env.example  .gitignore  .pre-commit-config.yaml  pyproject.toml
apps/artists/: admin.py  urls.py  views.py
apps/core/: admin.py  forms.py  managers.py  models.py  validations.py
apps/core/migrations/: 0001_initial.py  0002_artistprofile_userprofile.py  0002_rename_artistprofile_id_musicartists_artistprofile_and_more.py  0003_music_artists.py  0003_remove_artistprofile_created_at_and_more.py
apps/musics/: admin.py  urls.py  views.py
apps/profiles/: admin.py  signals.py  urls.py  validations.py  views.py
apps/users/: urls.py  views.py
config/: urls.py
config/settings/: base.py  dev.py  prod.py
